Shared adversarial conformance corpus across query-plan adapters (#270)
## Intent

Make the Spring Data implementation and differential harness the
canonical query-plan contract, then require every adapter to prove the
same behavior against a shared hostile corpus. This addresses the
repeated cross-adapter semantic bugs tracked in #258, #259, and #263.

Each adapter is intended to be published independently. Its README
therefore contains a complete, package-local copy of its supported
behavior, fail-closed shapes, timestamp/regex/null requirements, and
known planner divergence; consumers do not need this monorepo's central
documentation to understand the authorization contract.

## What changed

### Shared conformance corpus

- Added 118 adversarial actions over 20 hostile seed resources under
`conformance/`.
- Added golden `PlanResources` wire fixtures captured against Cerbos
0.54.0, plus validation and deterministic regeneration scripts.
- Added one central classification ledger for oracle-tested,
adapter-unsupported, reference-unsupported-but-promoted, and
upstream-divergent actions.
- The oracle recipe plans once, executes the adapter translation against
its real backing store, and compares returned resource IDs with
per-resource Cerbos `check()`/`checkResource()` decisions.
- Unsupported or semantically unsafe shapes must throw before their
filter can be used.

### Adapter coverage

| Adapter | Oracle-tested | Fail-closed | Notes |
| --- | ---: | ---: | --- |
| Spring Data | 114 | 3 | Gold-standard semantics; H2, PostgreSQL, and
MySQL |
| Prisma | 83 | 34 | Prisma 6 and 7; strict DateTime typing and
millisecond-exact timestamps |
| Drizzle | 112 | 5 | Real SQL queries; dialect regex rejected by
default |
| SQLAlchemy | 112 | 5 | Executable SQLAlchemy queries; regex requires
an explicit proven-equivalent override |
| Mongoose | 88 | 29 | Real MongoDB; promotes regex, ordered indexing,
and typed timestamp probes |
| LangChain ChromaDB | 15 | 102 | Real Chroma met