@@ -1,5 +1,8 @@
 package dev.cerbos.queryplan.springdata;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import dev.cerbos.queryplan.springdata.testmodel.CategoryEntity;
 import dev.cerbos.queryplan.springdata.testmodel.LabelEntity;
 import dev.cerbos.queryplan.springdata.testmodel.ResourceEntity;
@@ -24,8 +27,8 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
-import org.junit.jupiter.params.provider.ValueSource;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.jpa.domain.Specification;
 import org.testcontainers.containers.GenericContainer;
@@ -38,38 +41,34 @@ import org.testcontainers.images.builder.Transferable;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * Adversarial differential suite: every action in {@code adversarial-policy.yaml} is planned
- * against a REAL Cerbos PDP, translated by the adapter, and executed against seeded rows — then
- * the filtered id set is compared against an <em>oracle</em> computed by calling the PDP's
- * check API for each row with attributes mirroring that row exactly.
+ * Adversarial differential suite: every action from the repo-level {@code ../conformance/}
+ * corpus is planned against a real Cerbos PDP, translated by the adapter, and executed against
+ * seeded rows. The filtered id set is compared with an oracle computed by calling the check API
+ * for each row with matching attributes.
  *
  * <p>No hand-computed expectations: if the adapter's SQL semantics diverge from Cerbos's own
- * evaluation for any row, the mismatch surfaces mechanically. Seed rows deliberately hold
- * hostile data — empty collections, LIKE metacharacters ({@code % _ \}), unicode, empty strings,
- * negative numbers — and the policies use planner shapes the conformance policies don't
- * (value-first comparisons, empty {@code in} lists, fractional thresholds against integer
- * columns, outer attribute references two lambda levels deep).
+ * evaluation for any row, the mismatch surfaces mechanically. See {@code conformance/README.md}
+ * for the shared seed, NULL, and degeneracy conventions.
  *
  * <p><strong>Database selection.</strong> By default the suite runs on in-memory H2. Set the
- * {@code adapter.test.db} system property (forwarded from the {@code ADAPTER_TEST_DB} env var
- * by the Gradle build) to {@code postgres} or {@code mysql} to run the same differential oracle
- * against a real database started via Testcontainers — the same pattern used for the Cerbos PDP
- * container above. The MySQL leg creates its schema with the case-sensitive
- * {@code utf8mb4_0900_as_cs} collation the README requires; running it with MySQL's default
- * case/accent-insensitive collation ({@code -Dadapter.test.mysql.collation=utf8mb4_0900_ai_ci})
- * makes the mixed-case seeds (c1/c2) fail the oracle comparison, reproducing the silent
- * authorization over-grant documented in the README's "Database collation requirements" section.
+ * {@code adapter.test.db} system property (forwarded from {@code ADAPTER_TEST_DB}) to
+ * {@code postgres} or {@code mysql} to run the same oracle against a real Testcontainers
+ * database. The MySQL leg defaults to the case-sensitive {@code utf8mb4_0900_as_cs} collation;
+ * using {@code -Dadapter.test.mysql.collation=utf8mb4_0900_ai_ci} reproduces the documented
+ * case-insensitive authorization over-grant.
  */
 class AdversarialConformanceTest {
 
@@ -124,83 +123,46 @@ class AdversarialConformanceTest {
             )))
     );
 
+    // -- shared corpus (../conformance/): policy, seed data, and action list are read from disk
+    // rather than duplicated here. See conformance/README.md for the recipe these implement.
+
+    private static Path conformanceDir() {
+        return Path.of(System.getProperty("user.dir"), "..", "conformance").normalize();
+    }
+
+    @JsonIgnoreProperties(ignoreUnknown = true)
     private record Tag(String id, String name) {}
 
     /** One seeded row; the single source of truth for BOTH the DB entity and the oracle attributes. */
+    @JsonIgnoreProperties(ignoreUnknown = true)
     private record Seed(String id, boolean aBool, String aString, int aNumber,
                         String aOptionalString, List<Tag> tags, List<String> subCategoryNames) {}
 
-    private static final List<Seed> SEEDS = List.of(
-            new Seed("a1", true, "one", 5, "set",
-                    List.of(new Tag("t1a", "public")), List.of("finance")),
-            new Seed("a2", false, "100%_done", -2, null,
-                    List.of(), List.of()),
-            new Seed("a3", true, "100xdone", 2, "x",
-                    List.of(new Tag("t3a", "public"), new Tag("t3b", "public")), List.of()),
-            new Seed("a4", true, "xa_by", 1, null,
-                    List.of(new Tag("t4a", "private")), List.of()),
-            new Seed("a5", false, "xaXby", -5, "y",
-                    List.of(new Tag("t5a", "public")), List.of()),
-            new Seed("a6", true, "héllo🚀", 3, "",
-                    List.of(new Tag("t6a", "public"), new Tag("t6b", "private")), List.of("finance")),
-            new Seed("a7", true, "tail\\", 0, "z",
-                    List.of(new Tag("t7a", "other")), List.of()),
-            new Seed("a8", true, "", 2, null,
-                    List.of(new Tag("t8a", "public")), List.of("tech")),
-            // Field-to-field witness: aString == aOptionalString == a tag name, so the
-            // field-to-field and lambda-field-to-field oracles are non-degenerate.
-            new Seed("a9", true, "same", 4, "same",
-                    List.of(new Tag("t9a", "same")), List.of()),
-            // Field-to-field LIKE witnesses: the NEEDLE column (aOptionalString) holds LIKE
-            // metacharacters. b1 discriminates escaping for all three ops ("oneXtwo" does not
-            // literally contain "one_two", but an unescaped '_' wildcard would match the 'X');
-            // b2/b3 are literal % and \ matches that only work when the escape is correct.
-            new Seed("b1", true, "oneXtwo", 7, "one_two", List.of(), List.of()),
-            new Seed("b2", false, "50%_off", 6, "%_o", List.of(), List.of()),
-            new Seed("b3", true, "back\\slash", -4, "k\\s", List.of(), List.of()),
-            // Probe witness: a tag whose id equals its name (lambda-inner field-to-field).
-            new Seed("b4", false, "mirror", 8, "mirror",
-                    List.of(new Tag("mirror", "mirror")), List.of()),
-            // NULL element columns: a NULL tag name is a missing element attribute on the
-            // check side, so lambda bodies touching it are CEL evaluation errors. b5 holds
-            // ONLY a NULL-name tag (no true/false witness → macro errors); b6 mixes a
-            // NULL-name tag with a "public" one (exists absorbs the error, all/exists_one
-            // and map() do not).
-            new Seed("b5", true, "nulltag", 9, "nt",
-                    List.of(new Tag("t10a", null)), List.of()),
-            new Seed("b6", false, "mixed", 10, "mx",
-                    List.of(new Tag("t11a", null), new Tag("t11b", "public")), List.of()),
-            // Mixed-case collation witnesses: CEL string comparison at the PDP is exact and
-            // case-sensitive, so check() DENIES these rows for the lowercase constants the
-            // policies use ("one", "public", "finance", "a_b") — but a case-insensitive
-            // database collation (MySQL default utf8mb4_0900_ai_ci, SQL Server *_CI_*)
-            // matches them anyway, and the differential oracle catches the over-grant.
-            // c1 discriminates eq/in ("One" vs "one"), relation membership and
-            // hasIntersection ("Public" vs the principal's "public"), and nested-relation
-            // equality ("Finance" vs "finance"); c2 discriminates the LIKE family
-            // ("xA_by" wrongly matches contains("a_b") under a CI collation).
-            new Seed("c1", true, "One", 11, "Set",
-                    List.of(new Tag("tc1", "Public")), List.of("Finance")),
-            new Seed("c2", false, "xA_by", 12, null, List.of(), List.of()),
-            // SQL Server '[' escaping witnesses. d1 is the literal-bracket match: every
-            // generated pattern escapes '[' as '\[', which under ESCAPE '\' must STILL be a
-            // literal '[' on H2/PostgreSQL/MySQL (like-bracket startsWith, the f2f-* actions
-            // — its aOptionalString "[SEC]" is a bracket NEEDLE through the REPLACE chain —
-            // and hier-bracket via scopeFor). d2 is the character-class trap: on SQL Server
-            // an UNESCAPED '[SEC]%' would match "Secret" (one character from {S,E,C}); it
-            // must never match on any dialect.
-            new Seed("d1", true, "[SEC]ret", 13, "[SEC]", List.of(), List.of()),
-            new Seed("d2", false, "Secret", 14, "xSECy", List.of(), List.of()),
-            // in(variable, variable) null-null witness: owner (aOptionalString) is NULL —
-            // an EXPLICIT null on the check side — and the single tag's name column is NULL,
-            // an explicit null element of tagNames. CEL `null in [null]` is TRUE, so the
-            // in-var-var action must INCLUDE this row (EXISTS(member IS NULL AND scalar
-            // IS NULL)); like b5 it also exercises the macro error convention (a NULL tag
-            // name is a missing element attribute for lambda bodies).
-            new Seed("e1", true, "nullowner", 15, null,
-                    List.of(new Tag("te1", null)), List.of())
-    );
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private record PrincipalSpec(String id, List<String> roles, Map<String, List<String>> attr) {}
 
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private record SeedsFile(PrincipalSpec principal, String resourceKind, List<Seed> seeds) {}
+
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private record UnsupportedShape(String action, String shape, String springDataMessage) {}
+
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private record ActionsFile(List<String> conformance, List<UnsupportedShape> expectedUnsupported) {}
+
+    private static SeedsFile seedsFile;
+    private static ActionsFile actionsFile;
+    private static List<Seed> SEEDS;
+
+    static Stream<String> conformanceActions() {
+        return actionsFile.conformance().stream();
+    }
+
+    static Stream<Arguments> unsupportedShapes() {
+        return actionsFile.expectedUnsupported().stream()
+                .filter(u -> !u.action().equals("p-timestamp"))
+                .map(u -> Arguments.of(u.action(), u.springDataMessage()));
+    }
     /**
      * Deterministic label names per seed for the {@code macro-depth3-*} actions — the third
      * macro level (categories → subCategories → labels). A {@code null} entry seeds a label
@@ -316,6 +278,12 @@ class AdversarialConformanceTest {
 
     @BeforeAll
     static void setUp() throws Exception {
+        ObjectMapper mapper = new ObjectMapper();
+        Path conformance = conformanceDir();
+        seedsFile = mapper.readValue(conformance.resolve("seeds.json").toFile(), SeedsFile.class);
+        actionsFile = mapper.readValue(conformance.resolve("actions.json").toFile(), ActionsFile.class);
+        SEEDS = seedsFile.seeds();
+
         // Pinned PDP image — see CerbosTestImage for the pin rationale and bump policy.
         cerbos = new GenericContainer<>(CerbosTestImage.IMAGE)
                 .withExposedPorts(3593)
@@ -323,10 +291,9 @@ class AdversarialConformanceTest {
                 .withEnv("CERBOS_NO_TELEMETRY", "1")
                 .withLogConsumer(new Slf4jLogConsumer(LoggerFactory.getLogger("cerbos-adversarial-pdp")))
                 .waitingFor(Wait.forLogMessage(".*Starting gRPC server.*", 1));
-        try (InputStream policy = AdversarialConformanceTest.class
-                .getResourceAsStream("/adversarial-policy.yaml")) {
-            cerbos.withCopyToContainer(
-                    Transferable.of(policy.readAllBytes()), "/policies/adversarial.yaml");
+        try {
+            byte[] policy = Files.readAllBytes(conformance.resolve("policies").resolve("adversarial.yaml"));
+            cerbos.withCopyToContainer(Transferable.of(policy), "/policies/adversarial.yaml");
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -460,15 +427,19 @@ class AdversarialConformanceTest {
     // -- oracle: ask the PDP itself, row by row --
 
     private static Principal principal() {
-        return Principal.newInstance("u1", "USER")
-                .withAttribute("allowedTags", AttributeValue.listValue(
-                        AttributeValue.stringValue("public"),
-                        AttributeValue.stringValue("special")));
+        PrincipalSpec spec = seedsFile.principal();
+        Principal p = Principal.newInstance(spec.id(), spec.roles().toArray(new String[0]));
+        for (Map.Entry<String, List<String>> attr : spec.attr().entrySet()) {
+            p = p.withAttribute(attr.getKey(), AttributeValue.listValue(attr.getValue().stream()
+                    .map(AttributeValue::stringValue)
+                    .toArray(AttributeValue[]::new)));
+        }
+        return p;
     }
 
     /** Cerbos attributes mirroring exactly what the seeded DB row holds. */
     private static Resource asCheckResource(Seed s) {
-        Resource r = Resource.newInstance("adversarial", s.id())
+        Resource r = Resource.newInstance(seedsFile.resourceKind(), s.id())
                 .withAttribute("aBool", AttributeValue.boolValue(s.aBool()))
                 .withAttribute("aString", AttributeValue.stringValue(s.aString()))
                 .withAttribute("aNumber", AttributeValue.doubleValue(s.aNumber()))
@@ -587,7 +558,8 @@ class AdversarialConformanceTest {
     // -- adapter execution through the public Specification path --
 
     private static List<String> adapterFilteredIds(String action) {
-        PlanResourcesResult plan = client.plan(principal(), Resource.newInstance("adversarial"), action);
+        PlanResourcesResult plan = client.plan(
+                principal(), Resource.newInstance(seedsFile.resourceKind()), action);
         Specification<ResourceEntity> spec =
                 SpringDataQueryPlanAdapter.<ResourceEntity>toSpecification(plan, MAPPING).toSpecification();
 
@@ -609,100 +581,7 @@ class AdversarialConformanceTest {
     }
 
     @ParameterizedTest(name = "{0}")
-    @ValueSource(strings = {
-            "vf-le", "vf-ge", "vf-ne",
-            "in-single", "in-empty",
-            "like-percent", "like-underscore", "like-backslash", "like-bracket",
-            "unicode-eq", "empty-string-eq",
-            // explicit case-sensitivity witness (c1/c2 seeds also discriminate in-single,
-            // like-underscore, lambda-in-principal, and p-hasintersection-map on
-            // case-insensitive database collations — see the README collation section)
-            "cs-eq",
-            "neg-number", "double-threshold",
-            "all-on-empty", "exists-on-empty", "exists-one-multi", "not-exists",
-            "outer-attr-depth2", "lambda-in-principal",
-            "nary-and", "double-negation", "triple-negation", "not-empty",
-            "optional-ne",
-            "lambda-field-to-field", "field-to-field",
-            "size-threshold", "size-filter-count", "string-size",
-            "ternary-cmp", "ternary-expr-cond", "ternary-nested", "ternary-negated",
-            "ternary-bare", "ternary-value-first", "ternary-null-cond",
-            "f2f-contains", "f2f-startswith", "f2f-endswith",
-            "arith-add", "arith-vf", "arith-sub", "arith-mult-neg",
-            "arith-div", "arith-div-frac", "arith-both",
-            // IEEE add-solve probes: fractional eq/ne must lower to SQL double arithmetic,
-            // never to a Java-side algebraic solve (a1 aDouble=-0.6 is the divergence
-            // witness; a2 aDouble=0.25 pins the exact-arithmetic inclusion).
-            "arith-add-eq-frac", "arith-add-ne-frac", "arith-add-eq-frac-exact",
-            // clean-room probes (GROUP A)
-            "p-ternary-in-exists", "p-arith-in-lambda", "p-lambda-inner-f2f",
-            "p-lambda-f2f-like", "p-size-nested",
-            "p-ternary-of-ternaries", "p-ternary-vs-ternary", "p-ternary-under-all",
-            "p-hasintersection-map", "p-deep-nest",
-            "p-in-null-single", "p-in-null-multi", "p-startswith-concat",
-            // clean-room probes (GROUP B). Shapes that THROW are covered by
-            // unsupportedShapesThrow below. Known divergences excluded from the oracle run:
-            //   p-has            — planner folds has(unknown attr) to KIND_ALWAYS_ALLOWED, so the
-            //                      adapter returns all rows while check() denies NULL rows.
-            //                      Pinned by upstreamHasFoldOverGrantTripwire below, which fails
-            //                      loudly (with re-inclusion instructions) once upstream fixes
-            //                      the fold — never delete this exclusion without that test.
-            // p-double-frac is IN the run: the adapter forces IEEE double space (CAST columns,
-            // double bind parameters), so 3*0.1 == 0.3 is false in SQL exactly as in CEL.
-            "p-struct", "p-not-exists-empty", "p-not-ternary-null", "p-double-frac",
-            // NULL element columns under collection macros (b5/b6 witnesses)
-            "n-not-exists-one-null", "n-all-mixed-null", "n-not-all-null", "n-not-all-absorb",
-            // constant-receiver string matches (the constant is the haystack; escaping
-            // discriminators live in the a2/a4/a7 seeds)
-            "cr-contains", "cr-startswith", "cr-endswith", "cr-startswith-concat",
-            // arithmetic + size edges: zero column divisor (NaN → deny), fractional count
-            // threshold (only ordering ops compile in CEL — int vs double eq/ne does not)
-            "cr-div-zero", "cr-size-frac-ge",
-            // size(string) thresholds outside int range: giant constants arrive verbatim;
-            // the old (int) narrowing cast wrapped 4294967296 to 0, so gt returned every
-            // non-empty row (check() denies all) and lt returned nothing (check() allows all)
-            "size-huge-gt", "size-huge-lt",
-            // constant NaN / ±Infinity ordering: unfolded div(0,0) → NaN; every NaN
-            // ordering is false in CEL/IEEE, while ±Infinity orders normally
-            "nan-ord-ternary", "nan-ord-ternary-vf", "nan-ord-le", "nan-ord-inf",
-            // multi-hop relation chains via DIRECT dotted syntax (W1) and a root relation
-            // subquery anchored from inside a lambda body (W2)
-            "w1-exists-chain", "w1-size-chain", "w1-in-chain", "w2-outer-relation",
-            // depth-3 nested macros (categories → subCategories → labels): the single-
-            // subquery-per-polarity scoring translation must keep tri-state semantics through
-            // deep nesting — a1 true witness, a6 NULL-name label error propagating up both
-            // levels, a8 determined false, c1 case witness (labelsFor seeds)
-            "macro-depth3-exists", "macro-depth3-not-exists", "macro-depth3-all",
-            // hierarchy operators: both operand orders per operator (field-first ancestorOf
-            // and constant-first descendentOf route to the strict-prefix IN-list branch;
-            // the mirrored orders route to the prefix-LIKE branch) plus LIKE-metacharacter
-            // paths — seeds are documented on scopeFor(...)
-            "hier-ancestor-ff", "hier-ancestor-cf", "hier-descendent-ff", "hier-descendent-cf",
-            "hier-overlaps-ff", "hier-overlaps-cf", "hier-meta-like", "hier-meta-in",
-            "hier-bracket",
-            // timestamp(field) vs folded constant instants against the Instant column
-            // (created_at). ts-window is the retention-cutoff shape (now()-duration folds
-            // at plan time); ts-vf pins value-first MIRRORING (an inversion bug flips the
-            // included set); ts-eq/ts-eq-offset pin instant equality incl. non-UTC offset
-            // normalization; ts-ne pins NULL exclusion (a3 has no created_at: check()
-            // denies on the missing attribute AND SQL excludes the NULL row).
-            "ts-window", "ts-vf", "ts-eq", "ts-eq-offset", "ts-ne",
-            // in-lists containing null: the null element arrives VERBATIM and check()
-            // allows an explicitly-null `owner` (`null in [..., null]` is true) — the
-            // translation must be IN (nonNulls) OR IS NULL, with three-valued-safe
-            // negation; `in [null]` is planner-folded to eq-null; the rel variants pin
-            // EXISTS(member IS NULL); hasint pins the same null-element semantics through
-            // the shared intersection translation.
-            "in-null-elem-mixed", "in-null-elem-neg",
-            "in-null-elem-only", "in-null-elem-only-neg",
-            "in-null-elem-rel", "in-null-elem-rel-neg",
-            "in-null-elem-hasint",
-            // in(variable, variable): attribute-in-attribute membership via correlated
-            // EXISTS (member column = outer scalar column, NULL-null matching). Witnesses:
-            // a9/b4 match, e1 null-in-[null] (allow), a4/a8 null scalar vs non-null
-            // elements (deny; the negation allows), empty collections under the negation.
-            "in-var-var", "in-var-var-neg",
-    })
+    @MethodSource("conformanceActions")
     void adapterMatchesCheckOracle(String action) {
         List<String> oracle = oracleAllowedIds(action);
         List<String> filtered = adapterFilteredIds(action);
@@ -715,10 +594,7 @@ class AdversarialConformanceTest {
      * silently-wrong filter). Messages pinned so a regression to silent acceptance is caught.
      */
     @ParameterizedTest(name = "{0}")
-    @CsvSource({
-            "p-matches, Unsupported operator: matches",
-            "p-index, Unexpected get-field() expression in leaf operand of eq",
-    })
+    @MethodSource("unsupportedShapes")
     void unsupportedShapesThrow(String action, String expectedMessage) {
         IllegalArgumentException ex = assertThrows(
                 IllegalArgumentException.class, () -> adapterFilteredIds(action));
@@ -773,7 +649,7 @@ class AdversarialConformanceTest {
      * {@code check()} API denies resources that lack the attribute. The fold happens at the
      * PLANNER, so every query-plan adapter is affected equally; this adapter translates the
      * always-allowed plan faithfully. That is why {@code p-has} is excluded from the
-     * {@code adapterMatchesCheckOracle} {@code @ValueSource}: the differential comparison
+     * shared conformance action list: the differential comparison
      * cannot pass while the planner itself over-grants. (Tracked in the Cerbos team's
      * internal issue tracker as of 2026-07; no public cerbos/cerbos issue exists.)
      *
@@ -806,11 +682,11 @@ class AdversarialConformanceTest {
                 KIND_ALWAYS_ALLOWED while check() denied rows without the attribute — a known \
                 upstream planner fold this adapter translated faithfully into "return all \
                 rows". 'p-has' is therefore EXCLUDED from the adapterMatchesCheckOracle \
-                @ValueSource. This tripwire exists to keep that exclusion honest.
+                @MethodSource. This tripwire exists to keep that exclusion honest.
 
                 The exclusion is no longer justified. Do ALL of the following:
-                  1. Add "p-has" to the adapterMatchesCheckOracle @ValueSource and delete its
-                     exclusion note in the comment above it — the differential oracle then owns
+                  1. Classify "p-has" as a shared conformance action and delete its known-divergence
+                     entry — the differential oracle then owns
                      has() semantics and will catch any mistranslation of the new residual
                      plan shape mechanically.
                   2. Run the oracle. If the adapter cannot translate the residual shape the
